VFS-4356 fixed alignment of icon in brand-info component

--- a/app/styles/onedata-gui-common/components/brand-info.scss
+++ b/app/styles/onedata-gui-common/components/brand-info.scss
@@ -32,6 +32,7 @@
 
   .brand-type-version {
     font-size: 90%;
-    margin-top: 1px;
+    margin-top: 2px;
+    margin-bottom: -2px;
   }
 }
